ADD intables and current EN version

--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -189,44 +189,44 @@ image::crm:messenger-new-message-suggestion-list.png[width=640, height=360]
 |====
 |Einstellung |Erläuterung
 
-| *Empfänger:innen*
+|[#intable-recipients]*Empfänger:innen*
 |Gib hier einen Namen oder eine ID ein und wähle dann den passenden Wert aus der Vorschlagsliste (siehe <<#image-messenger-new-message-suggestion-list>>).
 
-| *Betreff*
+|[#intable-subject]*Betreff*
 |Gib einen Betreff für die Nachricht ein.
 
-| *Textfeld*
+|[#intable-text-field]*Textfeld*
 |Gib hier den Inhalt der Nachricht ein.
 
-| *Anhänge hinzufügen* (icon:attach_file[set=material])
+|[#intable-add-attachments]*Anhänge hinzufügen* (icon:attach_file[set=material])
 |Klicke auf icon:attach_file[set=material], um deiner Nachricht Anhänge hinzuzufügen. Wähle beliebig viele Anhänge von deinem Computer aus. +
 Die folgenden Dateitypen sind als Anhang in der Nachricht zulässig: bmp, csv, gif, jpeg, json, pdf, png, tiff, txt, xlsx, zip.
 
-| *Flüster-Modus* (icon:visibility[set=material] / icon:visibility_off[set=material, role=skyBlue])
+|[#intable-whisper-mode]*Flüster-Modus* (icon:visibility[set=material] / icon:visibility_off[set=material, role=skyBlue])
 |Du kannst Nachrichten flüstern, damit diese nur intern und _nicht_ für deine Kontakte sichtbar sind. Klicke dazu auf icon:visibility[set=material]. Du erkennst eine geflüsterte Nachricht in dieser Ansicht daran, dass die Schaltfläche icon:visibility_off[set=material, role=skyBlue] angezeigt wird. Außerdem ändert sich die Schaltfläche icon:forward_to_inbox[set=material] *SENDEN* in icon:visibility_off[set material] *FLÜSTERN*. +
 In der Übersicht werden geflüsterte Nachrichten in _kursiver Schrift_ dargestellt. +
 *_Hinweis:_* Sobald der Flüstermodus für diese Nachricht aktiviert ist, kann die Schaltfläche *Abrechnen* _nicht_ mehr aktiviert werden.
 
-| *Der Nachricht Tags zuweisen* (icon:local_offer[set=material])
+|[#intable-assign-tags-message]*Der Nachricht Tags zuweisen* (icon:local_offer[set=material])
 |Mit einem Klick auf icon:local_offer[set=material] kannst du nach Tags suchen und bereits bestehende Tags für die Nachricht wählen (icon:check_box[set=material, role=skyBlue]), neue Tags hinzufügen (icon:add[set=material]) und bestehende Tags bearbeiten (icon:edit[set=material]). +
 *_Hinweis:_* Sobald du einen Tag für die Nachricht gewählt hast, wird die Schaltfläche in blau angezeigt: icon:local_offer[set=material, role=skyBlue]. So erkennst du auf einen Blick, ob der Nachricht Tags zugewiesen sind. +
 *_Wichtig:_* Damit du die Nachricht abrechnen kannst, musst du mindestens ein Tag vom Typ *Nachrichten (kostenpflichtig)* erstellen.
 
-| *Nachricht abrechnen* (icon:more_vert[set=material])
+|[#intable-bill-message]*Nachricht abrechnen* (icon:more_vert[set=material])
 |Du kannst eine Nachricht immer dann abrechnen, wenn es sich _nicht_ um eine geflüsterte Nachricht handelt. Klicke dazu zunächst auf icon:more_vert[set=material]. Wenn du dann die Schaltfläche *Abrechnen* aktivierst (icon:toggle_on[set=material, role=skyBlue]), wird diese Nachricht abgerechnet. Die Schaltfläche icon:forward_to_inbox[set=material] *SENDEN* wird geändert in icon:forward_to_inbox[set=material] *ABRECHNEN UND SENDEN*. +
 *_Hinweis:_* Sobald die Schaltfläche *Abrechnen* aktiviert ist, kann für diese Nachricht _nicht_ der Flüstermodus aktiviert werden.
 
-| *Timer* (icon:more_vert[set=material])
+|[#intable-timer]*Timer* (icon:more_vert[set=material])
 |Du kannst für jede Nachricht einen Timer starten. Klicke dazu zunächst auf icon:more_vert[set=material]. Wenn du dann die Schaltfläche *Timer* aktivierst (icon:toggle_on[set=material, role=skyBlue]), startet automatisch der Timer neben der Schaltfläche icon:forward_to_inbox[set=material] *SENDEN*. +
 Klicke auf icon:pause_circle[set=material], um den Timer anzuhalten bzw. auf icon:play_circle[set=material], damit die Zeit weiterläuft.
 
-| *Posteingänge verwalten*
-|Mit einem Klick auf icon:edit[set=material] *Posteingänge verwalten* wirst du in das Menü *Einrichtung » Assistenten » Grundeinrichtung* weitergeleitet. Hier kannst du die Inboxen über den <<#assistent-durchlaufen, Assistenten>> *Messenger-Konfiguration* bearbeiten.
+|[#intable-manage-inboxes]*Posteingänge verwalten*
+|Mit einem Klick auf icon:edit[set=material] *Posteingänge verwalten* wirst du in das Menü *Einrichtung » Assistenten » Grundeinrichtung* weitergeleitet. Hier kannst du die Posteingänge über den <<#assistent-durchlaufen, Assistenten>> *Messenger-Konfiguration* bearbeiten.
 
-| _Name des aktuell gewählten Posteingangs_
+|[#intable-name-inbox]_Name des aktuell gewählten Posteingangs_
 | Mit einem Klick auf icon:arrow_drop_down[set=material] kannst du einen anderen Posteingang aus der Dropdown-Liste wählen. In der Liste werden die Namen der Posteingänge angezeigt, für die du jeweils den <<#assistent-durchlaufen, Assistenten durchlaufen>> hast.
 
-| *SENDEN*
+|[#intable-send]*SENDEN*
 |Mit einem Klick auf icon:forward_to_inbox[set=material] *SENDEN* wird die Nachricht gesendet. +
 *_Hinweis:_* Wenn du die Nachricht abrechnest, ändert sich der Name der Schaltfläche in icon:forward_to_inbox[set=material] *ABRECHNEN UND SENDEN*. Wenn du die Nachricht flüsterst, ändert sich der Name der Schaltfläche in icon:visibility_off[set=material] *FLÜSTERN*.
 
@@ -252,52 +252,52 @@ Konversation im Messenger suchen:
 |====
 |Filter |Erläuterung
 
-| *Betreff*
+|[#intable-filter-subject]*Betreff*
 |Gib ein Wort ein, um nach Konversationen zu suchen, die diesen Begriff im Betreff enthalten.
 
-| *Abgekürzte ID*
+|[#intable-filter-short-id]*Abgekürzte ID*
 |Gib die ID der Konversation ein, um nach der Konversation mit genau dieser ID zu suchen.
 
-| *Von* / *Bis*
+|[#intable-filter-from-to]*Von* / *Bis*
 |Gib ein Datum ein oder wähle die Datumsangaben aus den Kalendern (icon:today[set=material]), um nach Konversationen in einem bestimmten Zeitraum zu suchen.
 
-| *Herkunft*
+|[#intable-filter-referrer]*Herkunft*
 |Wähle eine Herkunft, um nach Konversationen mit dieser Herkunft zu suchen. +
 Verfügbare Optionen: *Backend*, *REST*, *Plugin* und *PayPal Plugin*.
 
-| *Status*
+|[#intable-filter-status]*Status*
 |Wähle einen Status, um nach Konversationen mit diesem Status zu suchen. +
 Verfügbare Werte: *Erledigt* und *Nicht erledigt*.
 
-| *Hat Anhänge*
+|[#intable-filter-has-attachments]*Hat Anhänge*
 |Wähle *Ja*, um nach Konversationen mit Anhängen zu suchen. Wähle *Nein*, um nach Konversationen ohne Anhänge zu suchen. 
 
-| *Hat abgerechnete Nachrichten*
+|[#intable-filter-has-billed-messages]*Hat abgerechnete Nachrichten*
 |Wähle *Ja*, um nach Konversationen zu suchen, in denen Nachrichten abgerechnet wurden. Wähle *Nein*, um nach Konversationen zu suchen, in denen keine Nachrichten abgerechnet wurden.
 
-| *Kontakt-ID*
+|[#intable-filter-contact-id]*Kontakt-ID*
 |Gib eine ID ein, um nur nach Konversationen zu suchen, die mit dieser Kontakt-ID verknüpft sind.
 
 ////
 kann man mehrere IDs kommasepariert eingeben und danach suchen?
 ////
 
-| *Auftrags-ID*
+|[#intable-filter-order-id]*Auftrags-ID*
 |Gib eine ID ein, um nur nach Konversationen zu suchen, die mit dieser Auftrags-ID verknüpft sind.
 ////
 kann man mehrere IDs kommasepariert eingeben und danach suchen?
 ////
 
-| *E-Mail*
+|[#intable-filter-email]*E-Mail*
 |Gib eine E-Mail-Adresse ein, um nach Konversationen zu suchen, in denen diese E-Mail-Adresse vorkommt.
 
-| *Tags*
+|[#intable-filter-tags]*Tags*
 |Wähle (icon:check_box[set=material, role=skyBlue]) Tags, um nach Konversationen mit diesen <<#tags-messenger, Tags>> zu suchen.
 
-| *Zurücksetzen*
+|[#intable-filter-reset]*Zurücksetzen*
 |Setzt die gewählten Filtereinstellungen zurück.
 
-| *Suchen*
+|[#intable-filter-search]*Suchen*
 |Führt die Suche aus. Die gefundenen Konversationen werden in der Übersicht angezeigt. +
 *_Tipp:_* Setze keine Filter, wenn du alle Konversationen in der Übersicht sehen möchtest.
 
@@ -356,53 +356,53 @@ In der Übersicht des Messenger kannst du dir die folgenden Spalten anzeigen las
 |====
 |Spalte |Erläuterung
 
-|Relationen erweitern
+|[#intable-overview-extend-relations]*Relationen erweitern*
 |Öffnet mit einem Klick auf icon:chevron_right[set=material] die vorhandenen Relationen, die mit der Konversation verknüpft sind.
 
-|Auswahl
+|[#intable-overview-selection]*Auswahl*
 |Zeigt die Checkbox für die <<#gruppenfunktion, Gruppenfunktion>> (icon:check_box_outline_blank[set=material]) in der Übersicht an.
 
-|Status
+|[#intable-overview-status]*Status*
 |Zeigt mit dem Symbol icon:circle[set=material, role=skyBlue] an, dass die Nachricht ungelesen ist. Zeigt mit dem Symbol icon:circle[set=material, role=green] an, dass die Nachricht abgeschlossen ist.
 
-
-|Abgekürzte ID
+|[#intable-overview-short-id]*Abgekürzte ID*
 |Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand der ID zu sortieren.
 
-|Herkunft
+|[#intable-overview-referrer]*Herkunft*
 |Zeigt mit einem Symbol die Herkunft der Nachricht an. +
 // ** Mögliche Werte: 
 
-|Relationen
+|[#intable-overview-relations]*Relationen*
 |Hier werden die Relationen zur Nachricht angezeigt, z.B. icon:person[set=material] _Name des Kontakts (Kontakt-ID)_, icon:shopping_cart[set=material] _Auftrags-ID_, icon:mail[set=material] _E-Mail-Adresse_ und die Abonnent:innen der Konversation. Mit einem Klick auf icon:chevron_right[set=material] in der Zeile der Konversation öffnen sich alle verfügbaren Relationen auf einen Blick. Mit einem Klick auf icon:expand_more[set=material] schließt du den Bereich der Relationen wieder. Der Kontakt und der Auftrag haben jeweils einen direkte Verknüpfung in den Kontaktdatensatz bzw. in den Auftrag.
 
-|Betreff
+|[#intable-overview-subject]*Betreff*
 |Zeigt den Betreff der ersten Nachricht innerhalb der Konversation an.
 // prüfen, ob das so stimmt.
 
-|Erstellt am
+|[#intable-overview-created-at]*Erstellt am*
 |Zeigt das Datum und die Uhrzeit an, wann die Nachricht erstellt wurde. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand des Datums zu sortieren.
 
-|Aktualisiert am
+|[#intable-overview-updated-at]*Aktualisiert am*
 |Zeigt das Datum und die Uhrzeit an, wann die Nachricht aktualisiert wurde. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand des Datums zu sortieren.
 
-|Tags
+|[#intable-overview-tags]*Tags*
 |Zeigt die <<#kontextmenue-tags-konversation, Tags>> an, die der Konversation zugeordnet sind.
 // prüfen, ob das so stimmt.
 
-|Anhänge
+|[#intable-overview-attachments]*Anhänge*
 |In der Spalte *Anzahl der Anhänge* (icon:attach_file[set=material]) zeigt das Symbol icon:attach_file[set=material] an, ob die Konversation Anhänge enthält. Wenn du mit der Maus über das Symbol fährst, siehst du, wie viele Anhänge die Konversation hat. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der Anhänge zu sortieren.
 
-|Abgerechnete Nachrichten
+|[#intable-overview-billed-messages]*Abgerechnete Nachrichten*
 |In der Spalte *Abgerechnete Nachrichten* (icon:credit_card[set=material]) zeigt das Symbol icon:credit_card[set=material] an, ob die Konversation abgerechnete Nachrichten enthält. Wenn du mit der Maus über das Symbol fährst, siehst du die Anzahl der abgerechneten Nachrichten. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der abgerechneten Nachrichten zu sortieren.
 
-|Abgerechnete Minuten
+|[#intable-overview-billed-minutes]*Abgerechnete Minuten*
 |In der Spalte *Abgerechnete Minuten* (icon:av_timer[set=material]) zeigt das Symbol icon:av_timer[set=material] an, ob die Konversation abgerechnete Minuten enthält. Wenn du mit der Maus über das Symbol fährst, siehst du die Anzahl der abgerechneten Minuten. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der abgerechneten Minuten zu sortieren.
 
-|Abonniert
-|In der Spalte icon:notifications[set=material] wird durch das Symbol icon:done[set=material] angezeigt, ob man die Konversation <<#konversation-abonnieren, abonniert>> hat.
+|[#intable-overview-subscribed]*Abonniert*
+|In der Spalte icon:notifications[set=material] wird durch das Symbol icon:done[set=material] angezeigt, ob die Konversation <<#konversation-abonnieren, abonniert>> wurde.
+// kann man hier auch sehen, wer die Konv. abonniert hat oder nur, dass sie abonniert wurde. Oder geht es nur darum, ob man sie selbst abonniert hat?
 
-|Kontextmenü
+|[#intable-overview-context-menu]*Kontextmenü*
 |Ermöglicht das Bearbeiten von Konversationen in der Übersicht mit Hilfe des <<#kontextmenue, Kontextmenüs>>.
 
 |====
@@ -725,27 +725,27 @@ image::crm:messenger-group-functions-conversations.png[width=640, height=360]
 |====
 |Bedienelement |Symbol |Erläuterung
 
-| *Konversationen als gelesen markieren*
+|[#intable-group-function-mark-conversations-read]*Konversationen als gelesen markieren*
 |icon:mark_email_read[set=material]
 |Markiert alle gewählten Konversationen als gelesen.
 
-| *Konversationen als ungelesen markieren*
+|[#intable-group-function-mark-conversations-unread]*Konversationen als ungelesen markieren*
 |icon:mark_email_unread[set=material]
 |Markiert alle gewählten Konversationen als ungelesen. Die Konversationen werden dann in Fettschrift angezeigt.
 
-| *Konversationen als erledigt markieren*
+|[#intable-group-function-mark-conversations-done]*Konversationen als erledigt markieren*
 |icon:circle[set=material]
 |Markiert alle gewählten Konversationen als erledigt.
 
-| *Konversationen als nicht erledigt markieren*
+|[#intable-group-function-mark-conversations-not-done]*Konversationen als nicht erledigt markieren*
 |icon:radio_button_unchecked[set=material]
 |Markiert alle gewählten Konversationen als nicht erledigt.
 
-| *Den Konversationen Tags zuweisen*
+|[#intable-group-function-assign-tags-conversations]*Den Konversationen Tags zuweisen*
 |icon:local_offer[set=material]
 |Weist allen gewählten Konversationen den gewünschten Tag zu.
 
-| *Konversationen löschen*
+|[#intable-group-function-delete-conversations]*Konversationen löschen*
 |icon:delete[set=material]
 |Löscht alle gewählten Konversationen nach dem Bestätigen der Sicherheitsabfrage.
 
@@ -768,53 +768,53 @@ Im Ordner *Neue Nachrichten* des Messengers kannst du dir die folgenden Spalten 
 |====
 |Spalte |Erläuterung
 
-|Relationen erweitern
+|[#intable-new-messages-extend-relations]*Relationen erweitern*
 |Öffnet mit einem Klick auf icon:chevron_right[set=material] die vorhandenen Relationen, die mit der Konversation verknüpft sind.
 
-|Auswahl
+|[#intable-new-messages-selection]*Auswahl*
 |Zeigt die Checkbox für die <<#gruppenfunktion, Gruppenfunktion>> (icon:check_box_outline_blank[set=material]) in der Übersicht an.
 
-|Status
+|[#intable-new-messages-status]*Status*
 |Zeigt mit dem Symbol icon:circle[set=material, role=skyBlue] an, dass die Nachricht ungelesen ist. Zeigt mit dem Symbol icon:circle[set=material, role=green] an, dass die Nachricht abgeschlossen ist.
 
 
-|Abgekürzte ID
+|[#intable-new-messages-short-id]*Abgekürzte ID*
 |Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand der ID zu sortieren.
 
-|Herkunft
+|[#intable-new-messages-referrer]*Herkunft*
 |Zeigt mit einem Symbol die Herkunft der Nachricht an. +
 // ** Mögliche Werte: 
 
-|Relationen
+|[#intable-new-messages-relations]*Relationen*
 |Hier werden die Relationen zur Nachricht angezeigt, z.B. icon:person[set=material] _Name des Kontakts (Kontakt-ID)_, icon:shopping_cart[set=material] _Auftrags-ID_, icon:mail[set=material] _E-Mail-Adresse_ und die Abonnent:innen der Konversation. Mit einem Klick auf icon:chevron_right[set=material] in der Zeile der Konversation öffnen sich alle verfügbaren Relationen auf einen Blick. Mit einem Klick auf icon:expand_more[set=material] schließt du den Bereich der Relationen wieder. Der Kontakt und der Auftrag haben jeweils einen direkte Verknüpfung in den Kontaktdatensatz bzw. in den Auftrag.
 
-|Betreff
+|[#intable-new-messages-subject]*Betreff*
 |Zeigt den Betreff der ersten Nachricht innerhalb der Konversation an.
 // prüfen, ob das so stimmt.
 
-|Erstellt am
+|[#intable-new-messages-created-at]*Erstellt am*
 |Zeigt das Datum und die Uhrzeit an, wann die Nachricht erstellt wurde. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand des Datums zu sortieren.
 
-|Aktualisiert am
+|[#intable-new-messages-updated-at]*Aktualisiert am*
 |Zeigt das Datum und die Uhrzeit an, wann die Nachricht aktualisiert wurde. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand des Datums zu sortieren.
 
-|Tags
+|[#intable-new-messages-tags]*Tags*
 |Zeigt die <<#kontextmenue-tags-konversation, Tags>> an, die der Konversation zugeordnet sind.
 // prüfen, ob das so stimmt.
 
-|Anhänge
+|[#intable-new-messages-attachments]*Anhänge*
 |In der Spalte *Anzahl der Anhänge* (icon:attach_file[set=material]) zeigt das Symbol icon:attach_file[set=material] an, ob die Konversation Anhänge enthält. Wenn du mit der Maus über das Symbol fährst, siehst du, wie viele Anhänge die Konversation hat. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der Anhänge zu sortieren.
 
-|Abgerechnete Nachrichten
+|[#intable-new-messages-billed-messages]*Abgerechnete Nachrichten*
 |In der Spalte *Abgerechnete Nachrichten* (icon:credit_card[set=material]) zeigt das Symbol icon:credit_card[set=material] an, ob die Konversation abgerechnete Nachrichten enthält. Wenn du mit der Maus über das Symbol fährst, siehst du die Anzahl der abgerechneten Nachrichten. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der abgerechneten Nachrichten zu sortieren.
 
-|Abgerechnete Minuten
+|[#intable-new-messages-billed-minutes]*Abgerechnete Minuten*
 |In der Spalte *Abgerechnete Minuten* (icon:av_timer[set=material]) zeigt das Symbol icon:av_timer[set=material] an, ob die Konversation abgerechnete Minuten enthält. Wenn du mit der Maus über das Symbol fährst, siehst du die Anzahl der abgerechneten Minuten. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der abgerechneten Minuten zu sortieren.
 
-|Abonniert
+|[#intable-new-messages-subscribed]*Abonniert*
 |In der Spalte icon:notifications[set=material] wird durch das Symbol icon:done[set=material] angezeigt, ob man die Konversation <<#konversation-abonnieren, abonniert>> hat.
 
-|Kontextmenü
+|[#intable-new-messages-context-menu]*Kontextmenü*
 |Ermöglicht das Bearbeiten von Konversationen in der Übersicht mit Hilfe des <<#kontextmenue, Kontextmenüs>>.
 
 |====
@@ -842,53 +842,53 @@ Im Ordner *Meine Nachrichten* des Messengers kannst du dir die folgenden Spalten
 |====
 |Spalte |Erläuterung
 
-|Relationen erweitern
+|[#intable-my-messages-extend-relations]*Relationen erweitern*
 |Öffnet mit einem Klick auf icon:chevron_right[set=material] die vorhandenen Relationen, die mit der Konversation verknüpft sind.
 
-|Auswahl
+|[#intable-my-messages-selection]*Auswahl*
 |Zeigt die Checkbox für die <<#gruppenfunktion, Gruppenfunktion>> (icon:check_box_outline_blank[set=material]) in der Übersicht an.
 
-|Status
+|[#intable-my-messages-status]*Status*
 |Zeigt mit dem Symbol icon:circle[set=material, role=skyBlue] an, dass die Nachricht ungelesen ist. Zeigt mit dem Symbol icon:circle[set=material, role=green] an, dass die Nachricht abgeschlossen ist.
 
 
-|Abgekürzte ID
+|[#intable-my-messages-short-id]*Abgekürzte ID*
 |Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand der ID zu sortieren.
 
-|Herkunft
+|[#intable-my-messages-referrer]*Herkunft*
 |Zeigt mit einem Symbol die Herkunft der Nachricht an. +
 // ** Mögliche Werte: 
 
-|Relationen
+|[#intable-my-messages-relations]*Relationen*
 |Hier werden die Relationen zur Nachricht angezeigt, z.B. icon:person[set=material] _Name des Kontakts (Kontakt-ID)_, icon:shopping_cart[set=material] _Auftrags-ID_, icon:mail[set=material] _E-Mail-Adresse_ und die Abonnent:innen der Konversation. Mit einem Klick auf icon:chevron_right[set=material] in der Zeile der Konversation öffnen sich alle verfügbaren Relationen auf einen Blick. Mit einem Klick auf icon:expand_more[set=material] schließt du den Bereich der Relationen wieder. Der Kontakt und der Auftrag haben jeweils einen direkte Verknüpfung in den Kontaktdatensatz bzw. in den Auftrag.
 
-|Betreff
+|[#intable-my-messages-subject]*Betreff*
 |Zeigt den Betreff der ersten Nachricht innerhalb der Konversation an.
 // prüfen, ob das so stimmt.
 
-|Erstellt am
+|[#intable-my-messages-created-at]*Erstellt am*
 |Zeigt das Datum und die Uhrzeit an, wann die Nachricht erstellt wurde. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand des Datums zu sortieren.
 
-|Aktualisiert am
+|[#intable-my-messages-updated-at]*Aktualisiert am*
 |Zeigt das Datum und die Uhrzeit an, wann die Nachricht aktualisiert wurde. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand des Datums zu sortieren.
 
-|Tags
+|[#intable-my-messages-tags]*Tags*
 |Zeigt die <<#kontextmenue-tags-konversation, Tags>> an, die der Konversation zugeordnet sind.
 // prüfen, ob das so stimmt.
 
-|Anhänge
+|[#intable-my-messages-attachments]*Anhänge*
 |In der Spalte *Anzahl der Anhänge* (icon:attach_file[set=material]) zeigt das Symbol icon:attach_file[set=material] an, ob die Konversation Anhänge enthält. Wenn du mit der Maus über das Symbol fährst, siehst du, wie viele Anhänge die Konversation hat. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der Anhänge zu sortieren.
 
-|Abgerechnete Nachrichten
+|[#intable-my-messages-billed-messages]*Abgerechnete Nachrichten*
 |In der Spalte *Abgerechnete Nachrichten* (icon:credit_card[set=material]) zeigt das Symbol icon:credit_card[set=material] an, ob die Konversation abgerechnete Nachrichten enthält. Wenn du mit der Maus über das Symbol fährst, siehst du die Anzahl der abgerechneten Nachrichten. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der abgerechneten Nachrichten zu sortieren.
 
-|Abgerechnete Minuten
+|[#intable-my-messages-billed-minutes]*Abgerechnete Minuten*
 |In der Spalte *Abgerechnete Minuten* (icon:av_timer[set=material]) zeigt das Symbol icon:av_timer[set=material] an, ob die Konversation abgerechnete Minuten enthält. Wenn du mit der Maus über das Symbol fährst, siehst du die Anzahl der abgerechneten Minuten. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der abgerechneten Minuten zu sortieren.
 
-|Abonniert
-|In der Spalte icon:notifications[set=material] wird durch das Symbol icon:done[set=material] angezeigt, ob man die Konversation <<#konversation-abonnieren, abonniert>> hat.
+|[#intable-my-messages-subscribed]*Abonniert*
+|In der Spalte icon:notifications[set=material] wird durch das Symbol icon:done[set=material] angezeigt, ob die Konversation <<#konversation-abonnieren, abonniert>> wurde.
 
-|Kontextmenü
+|[#intable-my-messages-context-menu]*Kontextmenü*
 |Ermöglicht das Bearbeiten von Konversationen in der Übersicht mit Hilfe des <<#kontextmenue, Kontextmenüs>>.
 
 |====
@@ -920,53 +920,53 @@ In Papierkorb des Messengers kannst du dir die folgenden Spalten anzeigen lassen
 |====
 |Spalte |Erläuterung
 
-|Relationen erweitern
+|[#intable-trash-extend-relations]*Relationen erweitern*
 |Öffnet mit einem Klick auf icon:chevron_right[set=material] die vorhandenen Relationen, die mit der Konversation verknüpft sind.
 
-|Auswahl
+|[#intable-trash-selection]*Auswahl*
 |Zeigt die Checkbox für die <<#gruppenfunktion, Gruppenfunktion>> (icon:check_box_outline_blank[set=material]) in der Übersicht an.
 
-|Status
+|[#intable-trash-status]*Status*
 |Zeigt mit dem Symbol icon:circle[set=material, role=skyBlue] an, dass die Nachricht ungelesen ist. Zeigt mit dem Symbol icon:circle[set=material, role=green] an, dass die Nachricht abgeschlossen ist.
 
 
-|Abgekürzte ID
+|[#intable-trash-short-id]*Abgekürzte ID*
 |Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand der ID zu sortieren.
 
-|Herkunft
+|[#intable-trash-referrer]*Herkunft*
 |Zeigt mit einem Symbol die Herkunft der Nachricht an. +
 // ** Mögliche Werte: 
 
-|Relationen
+|[#intable-trash-relations]*Relationen*
 |Hier werden die Relationen zur Nachricht angezeigt, z.B. icon:person[set=material] _Name des Kontakts (Kontakt-ID)_, icon:shopping_cart[set=material] _Auftrags-ID_, icon:mail[set=material] _E-Mail-Adresse_ und die Abonnent:innen der Konversation. Mit einem Klick auf icon:chevron_right[set=material] in der Zeile der Konversation öffnen sich alle verfügbaren Relationen auf einen Blick. Mit einem Klick auf icon:expand_more[set=material] schließt du den Bereich der Relationen wieder. Der Kontakt und der Auftrag haben jeweils einen direkte Verknüpfung in den Kontaktdatensatz bzw. in den Auftrag.
 
-|Betreff
+|[#intable-trash-subject]*Betreff*
 |Zeigt den Betreff der ersten Nachricht innerhalb der Konversation an.
 // prüfen, ob das so stimmt.
 
-|Erstellt am
+|[#intable-trash-created-at]*Erstellt am*
 |Zeigt das Datum und die Uhrzeit an, wann die Nachricht erstellt wurde. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand des Datums zu sortieren.
 
-|Aktualisiert am
+|[#intable-trash-updated-at]*Aktualisiert am*
 |Zeigt das Datum und die Uhrzeit an, wann die Nachricht aktualisiert wurde. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material] oder icon:arrow_downward[set=material], um die Tabelle aufsteigend oder absteigend anhand des Datums zu sortieren.
 
-|Tags
+|[#intable-trash-tags]*Tags*
 |Zeigt die <<#kontextmenue-tags-konversation, Tags>> an, die der Konversation zugeordnet sind.
 // prüfen, ob das so stimmt.
 
-|Anhänge
+|[#intable-trash-attachments]*Anhänge*
 |In der Spalte *Anzahl der Anhänge* (icon:attach_file[set=material]) zeigt das Symbol icon:attach_file[set=material] an, ob die Konversation Anhänge enthält. Wenn du mit der Maus über das Symbol fährst, siehst du, wie viele Anhänge die Konversation hat. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der Anhänge zu sortieren.
 
-|Abgerechnete Nachrichten
+|[#intable-trash-billed-messages]*Abgerechnete Nachrichten*
 |In der Spalte *Abgerechnete Nachrichten* (icon:credit_card[set=material]) zeigt das Symbol icon:credit_card[set=material] an, ob die Konversation abgerechnete Nachrichten enthält. Wenn du mit der Maus über das Symbol fährst, siehst du die Anzahl der abgerechneten Nachrichten. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der abgerechneten Nachrichten zu sortieren.
 
-|Abgerechnete Minuten
+|[#intable-trash-billed-minutes]*Abgerechnete Minuten*
 |In der Spalte *Abgerechnete Minuten* (icon:av_timer[set=material]) zeigt das Symbol icon:av_timer[set=material] an, ob die Konversation abgerechnete Minuten enthält. Wenn du mit der Maus über das Symbol fährst, siehst du die Anzahl der abgerechneten Minuten. Klicke rechts neben der Titelleiste auf icon:arrow_upward[set=material], um die Tabelle anhand der Anzahl der abgerechneten Minuten zu sortieren.
 
-|Abonniert
-|In der Spalte icon:notifications[set=material] wird durch das Symbol icon:done[set=material] angezeigt, ob man die Konversation <<#konversation-abonnieren, abonniert>> hat.
+|[#intable-trash-subscribed]*Abonniert*
+|In der Spalte icon:notifications[set=material] wird durch das Symbol icon:done[set=material] angezeigt, ob die Konversation <<#konversation-abonnieren, abonniert>> wurde.
 
-|Kontextmenü
+|[#intable-trash-context-menu]*Kontextmenü*
 |Ermöglicht das Bearbeiten von Konversationen in der Übersicht mit Hilfe des <<#kontextmenue, Kontextmenüs>>.
 
 |====
