--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -211,7 +211,7 @@ Die folgenden Bereiche werden erst nach einem Klick in der Navigation auf der li
 .Backend-Benutzer:innen: Fehlende Rechte für bestimmte Bereiche, Schaltflächen und Funktionen im Kontaktdatensatz?
 ====
 Wenn eine Person mit *Backend*-Zugriffsrechten bestimmte Bereiche und/oder darin enthaltene Schaltflächen und Funktionen im Kontaktdatensatz nicht sehen kann, muss eine Person mit *Admin*-Zugriffsrechten weitere Rechte im Benutzer:innenkonto im Menü *Einrichtung » Einstellungen » Benutzer » Rechte » Benutzer* aktivieren. +
-Alle benötigten Rechte für die einzelnen Bereiche, Schaltflächen und Funktionen im Kontaktdatensatz findest du auf der Handbuchseite xref:crm:vorbereitende-einstellungen.adoc#[Vorbereitende Einstellungen] im Kapitel xref:crm:vorbereitende-einstellungen.adoc#ansichten-freigeben-bereiche-schaltflaechen[Ansichten für bestimmte Bereiche und Schaltflächen im Kontaktdatensatz freigeben].
+Alle benötigten Rechte für die einzelnen Bereiche, Schaltflächen und Funktionen im Kontaktdatensatz findest du auf der Handbuchseite xref:crm:vorbereitende-einstellungen.adoc#[Vorbereitende Einstellungen vornehmen] im Kapitel xref:crm:vorbereitende-einstellungen.adoc#rechte-freigeben-bereiche-schaltflaechen[Rechte für bestimmte Bereiche und Schaltflächen im Kontaktdatensatz freigeben].
 ====
 
 * <<#kontaktdetails, Kontaktdetails>>
@@ -848,7 +848,7 @@ Mit einem Klick auf *Neue Firma hinzufügen* (icon:add[set=material]) öffnet si
 Nachdem du die Daten im <<#kontaktdatensatz-neu-laden, Kontaktdatensatz neu geladen>> hast, ist die neue Firma auch in der Übersicht sichtbar. +
 *_Wichtig:_* Die Verknüpfung zu der vorherigen Firma wird entfernt.
 
-[spalten-firmenuebersicht]
+[#spalten-firmenuebersicht]
 ==== Spalten in Firmenübersicht konfigurieren
 
 Mit einem Klick auf *Spalten konfigurieren* (icon:settings[set=material]) oben rechts entscheidest du, welche Spalten im Bereich *Firma* angezeigt werden. Klicke auf icon:sort[set=material], um die Reihenfolge der Spalten per Drag-and-drop zu verschieben. Die folgenden Spalten sind verfügbar:
